<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.katarzkubat.housedutiescompetition.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textViewPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_person" />

            <TextView
                android:id="@+id/score_first_person"
                style="@style/textViewPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForFirstPerson"
                android:text="@string/shopping" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForFirstPerson"
                android:text="@string/cleaning" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForFirstPerson"
                android:text="@string/cooking" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForFirstPerson"
                android:text="@string/washing" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoForFirstPerson"
                android:text="@string/cat_cuvette" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForFirstPerson"
                android:text="@string/repairing" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="subtractOneForFirstPerson"
                android:text="@string/loitering" />

        </LinearLayout>

        <View
            style="@style/view"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textViewPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_person" />

            <TextView
                android:id="@+id/score_second_person"
                style="@style/textViewPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForSecondPerson"
                android:text="@string/shopping" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForSecondPerson"
                android:text="@string/cleaning" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForSecondPerson"
                android:text="@string/cooking" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForSecondPerson"
                android:text="@string/washing" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoForSecondPerson"
                android:text="@string/cat_cuvette" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForSecondPerson"
                android:text="@string/repairing" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="subtractOneForSecondPerson"
                android:text="@string/loitering" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="resetScore"
        android:text="@string/start_again" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
